# del-fem

./: .gitignore  Cargo.toml
.github/workflows/: CI.yml  PyO3_Deploy.yml  PyO3_Test.yml
del-fem-candle/: Cargo.toml
del-fem-candle/src/: laplacian_smoothing.rs  lib.rs
del-fem-canvas/: Cargo.toml
del-fem-canvas/examples/: 00_del_fem_canvas__pbd2.rs  01_del_fem_canvas__rigid2.rs
del-fem-core/: Cargo.toml
del-fem-core/src/: arap.rs  dndx.rs  dudx.rs  hyper3.rs  hyper_hex.rs  incompressive_hex.rs  laplace_tri3.rs  lib.rs  linear_solid_hex.rs  linear_solid_tri2.rs  merge.rs  mitc_tri3.rs  pbd_rigidbody2.rs  quadratic_bending.rs  quadrature_line.rs  rod2.rs  solid_hyper_hex.rs  solid_hyper_svd.rs  solid_linear_hex.rs  spring2.rs  stvk_tri3.rs
del-fem-cpu/: Cargo.toml
del-fem-cpu/src/: lib.rs  rod3_darboux.rs  solid_hyper_svd.rs  solid_linear_tri2.rs  sparse_square.rs  spring3.rs  stvk_tri3.rs
del-fem-cuda-kernel/: Cargo.toml  build.rs
del-fem-cuda-kernel/src/: lib.rs  pbd_rod2.cu  spring2.h
del-fem-cudarc/: Cargo.toml
del-fem-cudarc-kernel/: Cargo.toml  build.rs
del-fem-cudarc-kernel/src/: laplacian_smoothing_jacobi.cu  lib.rs  simple.cu
del-fem-cudarc/examples/: 01_simple.rs
del-fem-cudarc/src/: diffuse_jacobi.rs  laplacian_smoothing_jacobi.rs  lib.rs  rod2.rs
del-fem-dlpack/: Cargo.toml
del-fem-dlpack/src/: lib.rs
del-fem-dlpack/tests/: test0.py
del-fem-examples/: Cargo.toml
del-fem-examples/examples/: 00_del_fem_canvas__pbd2.rs  00_pbd2_rod.rs  01_del_fem_canvas__rigid2.rs  02_pbd2_rod_gpu.rs  03_rod3_darboux.rs
del-fem-ls/: Cargo.toml
del-fem-ls/src/: linearsystem.rs  solver_sparse.rs  sparse_ilu.rs  sparse_square.rs
del-fem-numpy/: Cargo.toml  pyproject.toml
del-fem-numpy/del_fem/: LaplacianMatrix.py  LinearSolid.py  Mitc3.py  Rod3Darboux.py
del-fem-numpy/src/: block_sparse.rs  lib.rs  mesh_laplacian.rs  rod3_darboux.rs
del-fem-numpy/tests/: test_laplace.py  test_laplace_dells.py  test_laplace_scipy.py  test_rod3_darboux.py
del-fem-pyo3/: Cargo.toml  pyproject.toml
del-fem-pyo3/del_fem/: LaplacianMatrix.py
del-fem-pyo3/src/: lib.rs  mesh_laplacian.rs
del-fem-pyo3/tests/: test_laplace_dells.py
del-ls/: Cargo.toml
src/: arap.rs  laplace_tri2.rs  laplace_tri3.rs  lib.rs  linear_solid.rs  merge.rs  mesh_laplacian.rs  mitc_tri3.rs  stvk_tri3.rs
