[workspace]
members = ["del-fem-core", "del-fem-pyo3", "del-ls"]
resolver = "2"


[workspace.package]
name = "del-fem"
version = "0.1.3"
edition = "2021"
description = "finite element method (FEM) utility codes"
documentation = "https://docs.rs/del_fem"
repository = "https://github.com/nobuyuki83/del-fem/"
license = "MIT"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
num-traits = "0.2.19"
nalgebra = "0.33.0"
itertools = "0.13.0"
arrayref = "0.3.7"

# internal my library
del-ls = { path = "del-ls" }
del-fem-core = { path = "del-fem-core" }

# external my library
del-geo-core = { path = "../del-geo/del-geo-core" }
del-geo-nalgebra = { path = "../del-geo/del-geo-nalgebra" }
del-msh-core = { path = "../del-msh/del-msh-core" }

# del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
# del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
# del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
# del-ls = { git = "https://github.com/nobuyuki83/del-ls.git" }