[workspace]
members = [ "del-fem-canvas","del-fem-core", "del-fem-pyo3", "del-fem-ls"]
resolver = "2"

[workspace.package]
name = "del-fem"
version = "0.1.4"
edition = "2021"
description = "finite element method (FEM) utility codes"
documentation = "https://docs.rs/del_fem"
repository = "https://github.com/nobuyuki83/del-fem/"
license = "MIT"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
num-traits = "0.2.19"
nalgebra = "0.33.0"
itertools = "0.13.0"
arrayref = "0.3.7"
rand_chacha = "0.3.1"
rand = "0.8.5"

# internal my library
del-fem-ls = { path = "del-fem-ls" }
del-fem-core = { path = "del-fem-core" }

# for development
# del-geo-core = { path = "../del-geo/del-geo-core" }
# del-geo-nalgebra = { path = "../del-geo/del-geo-nalgebra" }
# del-msh-core = { path = "../del-msh/del-msh-core" }
# del-canvas-cpu = { path = "../del-canvas/del-canvas-cpu" }
# del-canvas-image = {path = "../del-canvas/del-canvas-image"}

# for github push
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
del-canvas-cpu = { git = "https://github.com/nobuyuki83/del-canvas" }
del-canvas-image = { git = "https://github.com/nobuyuki83/del-canvas" }

# for crate publish
# del-geo-core = "0.1.32"
# del-geo-nalgebra = "0.1.32"
# del-msh-core = "0.1.36"
# del-canvas-cpu = "0.1.2"


