[workspace]
members = [ "del-fem-canvas","del-fem-core", "del-fem-pyo3", "del-fem-ls", "del-fem-cudarc", "del-fem-candle"]
exclude = ["del-fem-cudarc-kernel"]
resolver = "2"

[workspace.package]
name = "del-fem"
version = "0.1.5"
edition = "2021"
description = "finite element method (FEM) utility codes"
documentation = "https://docs.rs/del_fem"
repository = "https://github.com/nobuyuki83/del-fem/"
license = "MIT"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
num-traits = "0.2.19"
nalgebra = "0.33.2"
itertools = "0.14.0"
arrayref = "0.3.9"
rand_chacha = "0.9.0"
rand = "0.9.0"
anyhow = "1.0.98"
rayon = "1.10.0"
pyo3 = { version = "0.24.1", features = ["extension-module"] }
numpy = "0.24.0"

# internal my library
del-fem-ls = { path = "del-fem-ls" }
del-fem-core = { path = "del-fem-core" }
del-fem-cudarc = { path = "del-fem-cudarc"}
del-fem-cudarc-kernel = { path = "del-fem-cudarc-kernel"}
del-fem-candle = { path = "del-fem-candle" }

# for development
# del-geo-core = { path = "../del-geo/del-geo-core" }
# del-geo-nalgebra = { path = "../del-geo/del-geo-nalgebra" }
# del-msh-core = { path = "../del-msh/del-msh-core" }
# del-canvas = { path = "../del-canvas" }

# for GitHub push
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git" }
del-geo-nalgebra = { git = "https://github.com/nobuyuki83/del-geo.git" }
del-msh-core = { git = "https://github.com/nobuyuki83/del-msh.git" }
del-canvas = { git = "https://github.com/nobuyuki83/del-canvas" }


# for crate publish
# del-geo-core = "0.1.33"
# del-geo-nalgebra = "0.1.33"
# del-msh-core = "0.1.37"



