[package]
name = "del-fem-canvas"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
num-traits = {workspace = true}
nalgebra = {workspace = true}
itertools = {workspace = true}
arrayref = {workspace = true}
rand_chacha = {workspace = true}
rand = {workspace = true}
#
del-geo-core = { workspace = true} # "0.1.29"
del-geo-nalgebra = {workspace = true} # "0.1.29"
del-msh-core = { workspace = true} # "0.1.34"
del-ls = { workspace = true} # "0.1.5"
del-fem-core = {workspace = true}
del-canvas-cpu = {workspace = true}
