[package]
name = "del-fem-canvas"
description = "hogehoge"
# documentation.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
num-traits.workspace = true
nalgebra.workspace = true
itertools.workspace = true
arrayref.workspace = true
rand_chacha.workspace = true
rand.workspace = true
anyhow.workspace = true
#
del-geo-core.workspace = true
# del-geo-nalgebra.workspace = true
del-msh-core.workspace = true
del-fem-ls.workspace = true
del-fem-core.workspace = true
del-canvas.workspace = true
