[package]
name = "del-fem-core"
description = "finite element method (FEM) utility codes"
version.workspace = true
edition = "2021"
documentation = "https://docs.rs/del_fem"
repository = "https://github.com/nobuyuki83/del-fem/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = {workspace = true}
nalgebra = {workspace = true}
itertools = {workspace = true}
arrayref = {workspace = true}
#
del-geo-core = "0.1.29" # { workspace = true}
del-geo-nalgebra = "0.1.29" # {workspace = true}
del-msh-core = "0.1.34" # { workspace = true}
del-ls = "0.1.5" # { workspace = true}