[package]
name = "del-fem-core"
description = "finite element method (FEM) utility codes"
documentation = "https://docs.rs/del_fem-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
num-traits = {workspace = true}
nalgebra = {workspace = true}
itertools = {workspace = true}
arrayref = {workspace = true}
del-geo-core = { workspace = true} # "0.1.29"
# del-geo-nalgebra = {workspace = true} # "0.1.29"
del-msh-core = { workspace = true} # "0.1.34"

# for develop/push
del-fem-ls = {workspace = true}

# for deploy
# del-fem-ls = "0.1.5"