[package]
name = "del-fem-cudarc"
description = "hogehoge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = ["dep:del-fem-cudarc-kernel"]

[dependencies]
anyhow.workspace = true
del-msh-core.workspace = true

# for push/develop
# del-fem-cudarc-kernel = {workspace = true, optional = true}

# for deploy
del-fem-cudarc-kernel = {  version = "0.1.0", optional = true }



