[package]
name = "del-fem-cudarc"
description = "hogehoge"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
cuda = ["dep:del-fem-cudarc-kernel", "dep:del-cudarc"]

[dependencies]
anyhow.workspace = true
del-msh-core.workspace = true

# for develop
# del-fem-cudarc-kernel = {workspace = true, optional = true}
# del-cudarc = {path="../../del-cudarc", optional = true}

# for push
del-fem-cudarc-kernel = {workspace = true, optional = true}
del-cudarc = {git="https://github.com/nobuyuki83/del-cudarc", optional = true}

# for deploy
# del-fem-cudarc-kernel = {  version = "0.1.0", optional = true }




