[package]
name = "del-fem-ls"
description = "sparse solver library for research prototyping"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nalgebra = "0.33.0"
num-traits = "0.2.19"
del-msh-cpu = {workspace = true}