[package]
name = "pydel-fem"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "del_fem"
crate-type = ["cdylib"]

[dependencies]
slice-of-array.workspace = true
rand_chacha.workspace = true
rand.workspace = true
pyo3.workspace = true
numpy.workspace = true
arrayref = {workspace = true}
#
del-fem-cpu = {workspace = true}
del-geo-core = {workspace = true}
del-msh-cpu = {workspace = true}