[package]
name = "pydel-fem"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "del_fem"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
numpy.workspace = true
arrayref = {workspace = true}
#
del-fem-core = {workspace = true}
del-geo-core = {workspace = true}
del-msh-core = {workspace = true}